# Yangtze_AutoImageStitch

./: .gitignore  CMakeLists.txt  README.md  ReadMe
data/input/: pano.tga  pano1.tga  pano3.tga
data/input/tool/: click.html
ext/: CMakeLists.txt
include/: Pano.hpp  PanoImage.hpp  PlanePano.h  SpherePano.h  array3D.h  common.h  exceptions.h  filtering.h  floatimage.h  stiches.hpp  stitches.hpp  utils.h  vector.h
src/: Pano.cpp  PanoImage.cpp  PlanePano.cpp  SpherePano.cpp  common.cpp  filtering.cpp  floatimage.cpp  main.cpp  stiches.cpp  stitches.cpp
